# sysex-mapatron

./: .gitignore
control/: Cargo.toml
control/src/: lib.rs
control/src/controllers/: sysex_mapped.rs
implporter/: README.md
implporter/src/: schemify.py  to_yaml.py
