[package]
name = "control"
version = "0.1.0"
edition = "2018"

[dependencies]
midi-msg = { git="https://github.com/AlexCharlton/midi-msg", rev="bbda058" }
midir = "0.7.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "0.2.13", features = ["full"] }
